<resources>
    <string name="app_name">Helpee</string>

    <string name="facebook_app_id">2825053527510903</string>
    <string name="fb_login_protocol_scheme">fb2825053527510903</string>

    <string name="google_maps_API_key">AIzaSyBySPLN3rNPnalWvH3gDXBzKTd4BB_X1cI</string>


    <string name="continue_with">continue with</string>
    <string name="register_or_login_using_email"><u>Register or Login using Email</u></string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="disability_type">Disability Type</string>
    <string name="next">Next</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abd-ElRhman Taha</string>
    <string name="nav_header_subtitle">abdelrhman@helpee.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_send">Send</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="request_professional_helper">Request medical service</string>
    <string name="helper_details">You can request helper To help you in your daily tasks like going to club or going to doctor or etc.</string>
    <string name="request_helper">Request Helper</string>
    <string name="choose_request_type">Choose Request Type</string>
    <string name="voluntary">Voluntary</string>
    <string name="choose_service_type">Choose Service Type</string>
    <string name="paid">Paid</string>
    <string name="you_can_request_home_care_service_with_doctors_nurses_and_physical_therapists">You can request home-care service with doctors, nurses and physical therapists</string>
    <string name="date">Date of Birth</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="schedule_your_help_time">Schedule Your help Time</string>
    <string name="confirm_help_time">Confirm help time</string>
    <string name="step_1_3">Step 1|3</string>
    <string name="select_time_date"><![CDATA[select Time & Date]]></string>
    <string name="order_setup">Order Setup</string>
    <string name="how_much_your_help_may_take">How Much Your Help May Take?</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="_number_one">1</string>
    <string name="hour_s">Hour(s)</string>
    <string name="describe_your_task">Describe Your Task.</string>
    <string name="my_task_is">my task is..</string>
    <string name="proceed">Proceed</string>
    <string name="increase_your_hours">Increase your Hours</string>
    <string name="step_2_3">Step 2|3</string>
    <string name="decrease_your_hours">Decrease_your_Hours</string>
    <string name="back">back</string>
    <string name="day_s">Day(s)</string>
    <string name="decrease_your_days">decrease your Days</string>
    <string name="increase_your_days">increase your Days</string>
    <string name="choose_the_preferred_gender_to_help_you">Choose the preferred gender to help you.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any">Any</string>
    <string name="where_will_you_need_help">where will you need Help?</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="both">Both</string>
    <string name="step_3_3">Step 3|3</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="xx_l_e">XX</string>
    <string name="l_e">L.E</string>
    <string name="add_promo_code"><u>Add Promo code</u></string>
    <string name="request_now">Request now !</string>
    <string name="requests_history">Requests History</string>
    <string name="upcoming_orders">Upcoming Orders</string>
    <string name="order_history">Order History</string>
    <string name="timeandDate">Tomorrow 8:30-8:45 Am</string>
    <string name="the_task">The Task</string>
    <string name="taskDiscreption">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when</string>
    <string name="requested_duration">Requested Duration :</string>
    <string name="_1_hour">1 hour</string>
    <string name="request_estimation_cost">Request Estimation Cost :</string>
    <string name="_50_l_e">50 L.E</string>
    <string name="order_statue">Order Statue :</string>
    <string name="accepted">Accepted</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="in_progress">In Progress</string>
    <string name="take_profile_photo">Take Profile Photo</string>
    <string name="choose_your_gender">Choose Your Gender</string>
    <string name="select_disability">select Disability</string>
    <string name="confirm_your_information">Confirm Your Information</string>
    <string name="login_using_facebook_account">Login Using Facebook account</string>
    <string name="login_using_email_and_password">Login using Email and Password</string>
    <string name="_20">+20</string>
    <string name="registration_amp_login"><![CDATA[Registration & login]]></string>
    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="upload">+ Upload</string>
    <string name="register">Register</string>
    <string name="choose_payment_method">Choose payment method.</string>

</resources>
