<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_policy"
            android:title="@string/menu_privacy_policy" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:icon="@drawable/ic_logout"
                android:id="@+id/nav_logout"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
