<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderSetupDaysFragment"
    android:background="@color/DarkBackGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:id="@+id/imgBackSetupDays"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_setup"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/how_much_your_help_may_take"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvHoursOrder"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/hours"
                android:gravity="center"
                android:textColor="@color/gray"
                android:background="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:text="@string/days"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/imgPlusDays"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/plus_shape"
                android:contentDescription="@string/increase_your_days"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_plus" />

            <TextView
                android:id="@+id/tvDaysNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/_number_one"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgMinusDays"
                android:background="@drawable/plus_shape"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:contentDescription="@string/decrease_your_days"
                android:src="@drawable/ic_minus"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/day_s"
                android:textSize="26sp"
                android:layout_marginStart="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:text="@string/describe_your_task"
            android:layout_marginBottom="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:hint="@string/my_task_is"
            android:padding="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="top|start"
            android:maxLines="5"
            android:textSize="16sp"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnProceedOrderDays"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/soildcolor_shape"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/proceed"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/step_2_3"
        android:gravity="end"
        android:textColor="@color/gray"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp" />

</RelativeLayout>