<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBackGround"
    tools:context=".Fragment.OrderSetupHoursFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBackSetupHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/order_setup"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/how_much_your_help_may_take"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPlusHours"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/plus_shape"
                android:clickable="true"
                android:contentDescription="@string/increase_your_hours"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_plus" />

            <TextView
                android:id="@+id/tvHoursNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_number_one"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgMinusHours"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/plus_shape"
                android:clickable="true"
                android:contentDescription="@string/decrease_your_hours"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_minus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/hour_s"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/describe_your_task"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/et_shape_task"
            android:gravity="top|start"
            android:hint="@string/my_task_is"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnProceedOrderHours"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/soildcolor_shape"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:text="@string/step_2_3"
        android:textColor="@color/gray" />
</RelativeLayout>