<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestsHistoryFragment"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/requests_history"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_orders"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"
            android:padding="7dp"
            android:textStyle="bold"
            android:background="@drawable/circle_accent_shape"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/order_history"
            android:textColor="@color/white"
            android:background="@drawable/circle_gray_shape"
            android:padding="7dp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:id="@+id/rvUpcomingOrders" />

</LinearLayout>